Mon Jun  7 22:36:24 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * DAnCE/tests/CIAO/EM-Launch-Failures/run_test.pl:
        * DAnCE/tests/CIAO/EM-Redeployment/run_test.pl:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test_cdr.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test_cdr.pl:
        * DAnCE/tests/CIAO/Progressive_Deployments/run_test.pl:
        * DAnCE/tests/LocalityManager/SpawnMultiple/run_test.pl:
        * DAnCE/tests/LocalityManager/SpawnOne/run_test.pl:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test.pl:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test_msm.pl:
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/DelReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/Exceptions/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterInArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterMulti/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterOutArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterReturn/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/NoReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test_one.pl:
        * connectors/ami4ccm/tests/UsesMulti/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_1_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_1.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_receiver.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_sender.pl: