@@ -1,3 +1,14 @@
+Tue Jun  8 06:33:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Contexts/Context_Impl_Base.h:
+        * ciao/Contexts/Context_Impl_Base.cpp:
+        * ciao/Contexts/Context_Impl_T.h:
+        * ciao/Servants/Servant_Impl_T.cpp:
+        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.h:
+        * connectors/dds4ccm/impl/dds/DataReader.h:
+        * connectors/dds4ccm/impl/dds/DataWriter.h:
+          Various layout changes
+
 Mon Jun  7 22:36:24 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
